--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,10 +1,25 @@
 @import './base.css';
 
-#app {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  font-weight: normal;
+body {
+  font-family: 'Helvetica Neue', HelveticaNeue, 'TeX Gyre Heros', TeXGyreHeros, FreeSans,
+    'Nimbus Sans L', 'Liberation Sans', Arimo, Helvetica, Arial, sans-serif;
+  font-size: 18px;
+  font-weight: 800;
+  line-height: 1.2;
+  color: hsla(0, 0%, 0%, 0.8);
+  background-color: hsla(0, 0%, 100%, 1);
+  padding: 0 1rem;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+h1 {
+  font-size: 72px;
+  font-weight: 800;
+}
+
+p {
+  margin: 1rem 0;
 }
 
 a,
@@ -22,14 +37,7 @@ a,
 }
 
 @media (min-width: 1024px) {
-  body {
-    display: flex;
-    place-items: center;
-  }
-
   #app {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
     padding: 0 2rem;
   }
 }
