--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -4,8 +4,9 @@ body {
   font-family: Helvetica, 'Helvetica Neue', HelveticaNeue, 'TeX Gyre Heros', TeXGyreHeros, FreeSans,
     'Nimbus Sans L', 'Liberation Sans', Arimo, Helvetica, Arial, sans-serif;
   font-size: 18px;
-  font-weight: 800;
+  font-weight: 500;
   line-height: 1.2;
+
   color: hsla(0, 0%, 0%, 0.9);
   background-color: hsla(0, 0%, 100%, 1);
   padding: 0 1rem;
@@ -21,13 +22,14 @@ h1 {
 }
 
 h2 {
-  font-size: 64px;
+  font-size: 48px;
   font-weight: 600;
+  text-transform: uppercase;
   letter-spacing: -1px;
 }
 
 p {
-  margin: 1rem 0;
+  margin: 0.4rem 0;
 }
 
 a,
